# Reverie

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_CN.md  Cargo.toml  README.md  README_CN.md  SUMMARY_CN.md  build.rs  clippy.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  nightly.yml
Docs/: ARCHITECTURE.md  ARCHITECTURE_CN.md  COMPLETION_STATUS.md  SUMMARY.md  SUMMARY_CN.md
examples/: simple_server.rs
reverie-core/: Cargo.toml
reverie-core/src/: error.rs  lib.rs  models.rs  tests.rs
reverie-core/src/tests/: core_model_tests.rs  media_file_tests.rs  mod.rs  subsonic_model_tests.rs
reverie-network/: Cargo.toml
reverie-network/src/: axum_server.rs  dto.rs  error.rs  lib.rs  tests.rs  traits.rs
reverie-network/src/axum_server/: albums.rs  artists.rs  health.rs  mod.rs  playlists.rs  tracks.rs
reverie-network/src/subsonic/: auth.rs  browsing.rs  mod.rs  params.rs  playlists.rs  response.rs  tests.rs  users.rs
reverie-network/src/subsonic/response/: albums.rs  artists.rs  core.rs  misc.rs  mod.rs  playlists.rs  songs.rs  users.rs
reverie-network/src/subsonic/tests/: api_tests.rs  mock_storage.rs  mod.rs
reverie-server/: Cargo.toml
reverie-server/src/: lib.rs  main.rs
reverie-storage/: Cargo.toml
reverie-storage/src/: database.rs  error.rs  filesystem.rs  lib.rs  memory.rs  tests.rs  traits.rs  vfs.rs
reverie-storage/src/database/: album.rs  config.rs  core.rs  mod.rs  scan.rs  subsonic.rs  track.rs  user_playlist.rs
reverie-storage/src/memory/: album_artist.rs  core.rs  mod.rs  subsonic.rs  track.rs  user_playlist.rs
reverie-storage/src/scanner/: metadata.rs  mod.rs  scanner.rs
reverie-storage/src/traits/: core.rs  file.rs  mod.rs  storage.rs  subsonic.rs  user.rs
reverie-storage/src/vfs/: config.rs  mod.rs  opendal.rs  types.rs  vfs_trait.rs
reverie-storage/tests/: filesystem_storage_tests.rs  memory_storage_tests.rs
reverie-ui/: Cargo.toml  Dioxus.toml  README.md  tailwind.config.js  tailwind.css
reverie-ui/assets/: tailwind.css
reverie-ui/src/: lib.rs  main.rs  mock.rs  routes.rs
reverie-ui/src/api/: mod.rs
reverie-ui/src/components/: cards.rs  common.rs  layout.rs  lists.rs  mod.rs  player.rs
reverie-ui/src/pages/: album_detail.rs  albums.rs  artist_detail.rs  artists.rs  favorites.rs  home.rs  login.rs  mod.rs  playlist_detail.rs  playlists.rs  search.rs  settings.rs  songs.rs
reverie-ui/src/state/: mod.rs
src/: main.rs
