[workspace]
members = [
    "reverie-core",
    "reverie-storage",
    "reverie-network",
    "reverie-server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Reverie Contributors"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
hyper = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }

# Configuration
config = "0.14"

# Testing
mockall = "0.12"
