[package]
name = "reverie-ui"
version = "0.1.0"
edition = "2021"
description = "Reverie Music Server Web UI - Built with Dioxus"
authors = ["Reverie Team"]
license = "MIT"

[dependencies]
# Dioxus core with fullstack support
dioxus = { version = "0.7", features = ["fullstack", "router"] }

# Core dependencies
reverie-core = { path = "../reverie-core" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"], optional = true }

# HTTP client for API calls
reqwest = { version = "0.12", features = ["json"], default-features = false }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Logging
tracing = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.12", features = ["json"], default-features = false }
web-sys = { version = "0.3", features = ["Window", "Navigator", "MediaSession", "MediaMetadata", "MediaSessionAction"] }
wasm-bindgen = "0.2"
gloo-timers = { version = "0.3", features = ["futures"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
server = ["dioxus/server", "tokio"]
